# gsuite-custom-schema-update

./: .gitignore  README.md  cli.py  custom-schema.yaml  federation.yaml  pyproject.toml  requirements.txt
gsuite_update_script/: run.py
gsuite_update_script.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_gsuite_update_script.py
